--- a/source/Desafios/Desafio4.html
+++ b/source/Desafios/Desafio4.html
@@ -25,6 +25,18 @@
                 }
             }
         }
+        
+        /* Podemos resolver dessa maneira também
+        
+        function fizzBuss() {
+            for (var i = 1; i <= 100; i++) {
+                var valor = "";
+                if (i % 3 === 0) valor += "Fizz";
+                if (i % 5 === 0) valor += "Buzz";
+                console.log(valor || i);
+            }
+        }
+        */
 
     </script>
 
